Reduce the ES4X specific feature for handling module loading, and replace with standards: import-maps
Signed-off-by: Paulo Lopes <pmlopes@gmail.com>